# simple

./: .eslintrc  .gitattributes  .gitignore  .npmrc  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  index.html  nodemon.json  package.json  pnpm-lock.yaml  stats.html  tsconfig.json  unocss.config.ts  vite.config.ts
.github/workflows/: ci.yml
server/: Cargo.toml
server/conf/: simple-dev.toml  simple-prod.toml
server/src/: config.rs  logger.rs  main.rs
simple_derive/: Cargo.toml
simple_derive/src/: lib.rs
simple_derive/tests/: into_value_kind.rs
src/: App.vue  auto-imports.d.ts  components.d.ts  index.css  main.ts  server.ts  vue-router.d.ts
src/components/: MainLayout.vue
src/components/app/: Header.vue  HeaderExtra.vue  HeaderHero.vue  HeaderMenu.vue  SideMenu.vue
src/components/develop/: Studio.vue
src/components/management/: ManagementPanel.vue
src/components/settings/: SettingsPanel.vue
src/composables/: config.ts  discrete.ts  editor.ts  input.ts  util.ts
src/composables/api/: client.ts  datasource.ts  templates.ts  useTemplates.ts
src/pages/: [...any].vue  develop.vue  index.vue  management.vue  settings.vue
src/router/: index.ts
src/server/: server.ts
src/server/consts/: regexp.ts
src/server/controllers/: data-source.controller.ts  index.ts  template.controller.ts
src/server/domain/: index.ts
src/server/domain/table/: table.domain.ts
src/server/routes/: index.ts
src/server/service/: data-source.service.ts  index.ts  template.service.ts  test.ts
src/server/utils/: http.ts  logger.ts  path.ts
src/service/: test.ts
(+6 files in other folders)
