[package]
name = "simple_derive"
authors.workspace = true
version.workspace = true
edition.workspace = true

[lib]
proc_macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"

[dev-dependencies]
config = "0.13"

[[test]]
name = "test"
path = "tests/*.rs"